--- a/AnnZone-Console/src/app/theme/pages/blog/publish/publish.component.html
+++ b/AnnZone-Console/src/app/theme/pages/blog/publish/publish.component.html
@@ -217,7 +217,7 @@
                         </label>
                         <div class="col-lg-6">
                             <nz-upload
-                                    nzAction="{{coverUploadUrl}}"
+                                    [nzAction]="coverUploadUrl"
                                     nzListType="picture-card"
                                     nzAccept="image/*"
                                     [nzData]="coverFormData"
