--- a/AnnZone-Console/src/app/theme/pages/user/profile/profile.component.html
+++ b/AnnZone-Console/src/app/theme/pages/user/profile/profile.component.html
@@ -512,18 +512,25 @@
 										选择头像
 									</label>
 									<div class="col-7">
-										<nz-upload class="avatar-uploader"
-												   nzAction="https://jsonplaceholder.typicode.com/posts/"
-												   nzName="avatar"
-												   [nzShowUploadList]="false"
-												   [nzBeforeUpload]="beforeUpload"
-												   (nzChange)="handleChange($event)">
-											<i *ngIf="!avatarUrl" class="anticon anticon-plus avatar-uploader-trigger"></i>
-											<img *ngIf="avatarUrl" [src]="avatarUrl" class="avatar">
+										<nz-upload
+												[nzAction]="avatarUploadUrl"
+												nzListType="picture-card"
+												nzAccept="image/*"
+												[nzData]="avatarFormData"
+												[nzHeaders]="avatarUploadHeaders"
+												[(nzFileList)]="fileList"
+												[nzShowButton]="fileList.length < 1"
+												[nzBeforeUpload]="beforeUpload"
+												(nzChange)="avatarChange($event)"
+												[nzPreview]="handlePreview">
+											<i class="anticon anticon-plus"></i>
+											<div class="ant-upload-text">上传</div>
 										</nz-upload>
-										<span class="m-form__help">
-											点击图片可重新选择上传图片
-										</span>
+										<nz-modal [nzVisible]="previewVisible" [nzContent]="modalContent" [nzFooter]="null" (nzOnCancel)="previewVisible=false">
+											<ng-template #modalContent>
+												<img [src]="previewImage" [ngStyle]="{ 'width': '100%' }" />
+											</ng-template>
+										</nz-modal>
 									</div>
 								</div>
 
