--- a/AnnZone-Console/src/app/theme/layouts/header-nav/header-nav.component.html
+++ b/AnnZone-Console/src/app/theme/layouts/header-nav/header-nav.component.html
@@ -726,7 +726,7 @@
 							<li class="m-nav__item m-topbar__user-profile  m-dropdown m-dropdown--medium m-dropdown--arrow  m-dropdown--align-right m-dropdown--mobile-full-width m-dropdown--skin-light" data-dropdown-toggle="click">
 								<a href="#" class="m-nav__link m-dropdown__toggle">
 									<span class="m-topbar__userpic m--hide">
-										<img src="./assets/app/media/img/users/user4.jpg" class="m--img-rounded m--marginless m--img-centered" alt=""/>
+										<img src="{{avatar.url}}" class="m--img-rounded m--marginless m--img-centered" alt=""/>
 									</span>
 									<span class="m-nav__link-icon m-topbar__usericon">
 										<span class="m-nav__link-icon-wrapper">
@@ -734,7 +734,7 @@
 										</span>
 									</span>
 									<span class="m-topbar__username m--hide">
-										绿血贵族
+										{{userinfo.nickname}}
 									</span>
 								</a>
 								<div class="m-dropdown__wrapper">
@@ -743,14 +743,14 @@
 										<div class="m-dropdown__header m--align-center">
 											<div class="m-card-user m-card-user--skin-light">
 												<div class="m-card-user__pic">
-													<img src="./assets/app/media/img/users/user4.jpg" class="m--img-rounded m--marginless" alt=""/>
+													<img src="{{avatar.url}}" class="m--img-rounded m--marginless" alt=""/>
 												</div>
 												<div class="m-card-user__details">
 													<span class="m-card-user__name m--font-weight-500">
-														绿血贵族
+														{{userinfo.nickname}}
 													</span>
-													<a href="" class="m-card-user__email m--font-weight-300 m-link">
-														Jiankian
+													<a routerLink="/user/profile" class="m-card-user__email m--font-weight-300 m-link">
+														{{userinfo.username}}
 													</a>
 												</div>
 											</div>
