--- a/AnnZone-Console/src/app/theme/pages/user/profile/profile.component.html
+++ b/AnnZone-Console/src/app/theme/pages/user/profile/profile.component.html
@@ -82,7 +82,7 @@
 						</div>
 						<div class="m-card-profile__pic">
 							<div class="m-card-profile__pic-wrapper">
-								<img src="./assets/app/media/img/users/user4.jpg" alt=""/>
+								<img src="{{avatar.url}}" alt=""/>
 							</div>
 						</div>
 						<div class="m-card-profile__details">
