--- a/AnnZone-Android/app/src/main/res/layout/fragment_me.xml
+++ b/AnnZone-Android/app/src/main/res/layout/fragment_me.xml
@@ -6,6 +6,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/tv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
