--- a/AnnZone-Android/app/src/main/res/values/colors.xml
+++ b/AnnZone-Android/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="colorRed">#F2453D</color>
     <color name="colorPurple">#9B24B6</color>
     <color name="colorPink">#E6285D</color>
+    <color name="colorGray">#D5D6D6</color>
+    <color name="colorGrayDark">#eaecec</color>
 </resources>
