基本界面规

--- a/AnnZone-Android/app/src/main/res/layout/fragment_discover.xml
+++ b/AnnZone-Android/app/src/main/res/layout/fragment_discover.xml
@@ -1,14 +1,100 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tl="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rl_DiscoverFragment"
     tools:context="cn.anline.annzone.ui.DiscoverFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/tv"
+    <!--顶部操作 start-->
+    <RelativeLayout
+        android:id="@+id/rl_top_wrapper"
+        android:background="@drawable/discover_top_bg"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:id="@+id/rl_top_inner"
+            android:layout_width="match_parent"
+            android:layout_height="45dp">
+            <ImageView
+                android:id="@+id/iv_top_logo"
+                android:src="@mipmap/top_logo"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content" />
+            <RelativeLayout
+                android:id="@+id/rl_search_wrapper"
+                android:layout_toRightOf="@id/iv_top_logo"
+                android:layout_toLeftOf="@id/iv_qrcode"
+                android:background="@drawable/discover_search_bg"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_centerVertical="true"
+                android:layout_width="match_parent"
+                android:layout_height="35dp">
+                <ImageView
+                    android:id="@+id/iv_search_icon"
+                    android:src="@mipmap/search_icon"
+                    android:layout_marginLeft="10dp"
+                    android:layout_centerVertical="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <EditText
+                    android:id="@+id/et_search"
+                    android:layout_toRightOf="@id/iv_search_icon"
+                    android:background="@color/colorAlpha"
+                    android:textColorHint="@color/colorBlank"
+                    android:layout_centerVertical="true"
+                    android:hint="@string/search_hint"
+                    android:imeOptions="actionSearch"
+                    android:textColor="@color/white"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
 
-</FrameLayout>
+            <ImageView
+                android:id="@+id/iv_qrcode"
+                android:src="@mipmap/qrcode_scan_icon"
+                android:layout_toLeftOf="@id/iv_bell"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="24sp" />
+            <ImageView
+                android:id="@+id/iv_bell"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
+                android:src="@mipmap/bell_icon"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:layout_height="24sp" />
+
+        </RelativeLayout>
+    </RelativeLayout>
+
+    <!--顶部操作 end-->
+
+    <!--分类slider start-->
+    <com.flyco.tablayout.SlidingTabLayout
+        android:id="@+id/flyco_tab"
+        android:layout_below="@id/rl_top_wrapper"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        tl:tl_textSelectColor="@color/colorBlue"
+        tl:tl_indicator_color="@color/colorBlue"
+        tl:tl_textUnselectColor="@color/colorGrayLight"
+        tl:tl_textAllCaps="true"
+        tl:tl_textBold="BOTH"
+        tl:tl_textsize="14sp"/>
+    <!--分类slider end-->
+
+    <!--滑动列表 start-->
+    <android.support.v4.view.ViewPager
+        android:id="@+id/discover_viewPager"
+        android:layout_below="@+id/flyco_tab"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v4.view.ViewPager>
+    <!--滑动列表 end-->
+</RelativeLayout>
