--- a/AnnZone-Android/app/src/main/res/layout/fragment_publish.xml
+++ b/AnnZone-Android/app/src/main/res/layout/fragment_publish.xml
@@ -1,14 +1,37 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorOrange"
+    android:id="@+id/rl_PublishFragment"
     tools:context="cn.anline.annzone.ui.PublishFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/tv"
+    <cn.anline.annzone.view.CircleMenuLayout
+        android:id="@+id/circleMenuLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_centerInParent="true"
+        android:padding="100dp"
+        android:background="@drawable/circle_bg3" >
 
-</FrameLayout>
+        <RelativeLayout
+            android:id="@id/id_circle_menu_item_center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <ImageView
+                android:layout_width="104.0dip"
+                android:layout_height="104.0dip"
+                android:layout_centerInParent="true"
+                android:background="@drawable/ic_launcher_foreground" />
+
+            <ImageView
+                android:layout_width="116.0dip"
+                android:layout_height="116.0dip"
+                android:layout_centerInParent="true"
+                android:background="@drawable/turnplate_mask_unlogin_normal" />
+        </RelativeLayout>
+    </cn.anline.annzone.view.CircleMenuLayout>
+
+</RelativeLayout>
