--- a/AnnZone-Android/app/src/main/res/layout/fragment_project.xml
+++ b/AnnZone-Android/app/src/main/res/layout/fragment_project.xml
@@ -1,7 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/rl_ProjectFragment"
     tools:context="cn.anline.annzone.ui.ProjectFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -11,4 +12,4 @@
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+</RelativeLayout>
