--- a/AnnZone-Android/app/src/main/res/drawable/discover_search_bg.xml
+++ b/AnnZone-Android/app/src/main/res/drawable/discover_search_bg.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/colorPink" />
+    <gradient android:angle="9000"
+        android:type="linear"
+        android:startColor="@color/colorPurple"
+        android:centerColor="@color/colorPink"
+        android:endColor="@color/colorPink"/>
     <corners
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp"
-        android:bottomRightRadius="20dp"
-        android:bottomLeftRadius="20dp"/>
-    <stroke android:width="1dp" android:color="@color/white" />
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"
+        android:bottomRightRadius="10dp"
+        android:bottomLeftRadius="10dp"/>
+    <stroke android:width="0.1px" android:color="@color/white" />
 </shape>
