--- a/AnnZone-Android/app/src/main/res/drawable/discover_top_bg.xml
+++ b/AnnZone-Android/app/src/main/res/drawable/discover_top_bg.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="9000"
+        android:startColor="@color/colorPurple"
         android:endColor="@color/colorPink"
-        android:startColor="@color/colorPurple" />
+        />
 </shape>
