修正魅蓝YUNOS系统加载Drawdle PATH图片奔溃问题....

--- a/AnnZone-Android/app/src/main/res/layout/fragment_publish.xml
+++ b/AnnZone-Android/app/src/main/res/layout/fragment_publish.xml
@@ -24,7 +24,7 @@
                 android:layout_width="104.0dip"
                 android:layout_height="104.0dip"
                 android:layout_centerInParent="true"
-                android:background="@drawable/ic_launcher_foreground" />
+                android:background="@drawable/logo" />
 
             <ImageView
                 android:layout_width="116.0dip"
