--- a/AnnZone-Console/src/app/theme/pages/microblog/list/list.component.html
+++ b/AnnZone-Console/src/app/theme/pages/microblog/list/list.component.html
@@ -189,97 +189,38 @@
 			</div>
 		</div>
 		<div class="m-portlet__body">
-			<!--begin: Search Form -->
-			<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
-				<div class="row align-items-center">
-					<div class="col-xl-8 order-2 order-xl-1">
-						<div class="form-group m-form__group row align-items-center">
-							<div class="col-md-4">
-								<div class="m-input-icon m-input-icon--left">
-									<input type="text" class="form-control m-input m-input--solid" placeholder="Search..." id="generalSearch">
-									<span class="m-input-icon__icon m-input-icon__icon--left">
-												<span>
-													<i class="la la-search"></i>
-												</span>
-											</span>
-								</div>
+			<!--begin: Datatable -->
+			<!--列表展示区开始-->
+			<nz-card>
+				<ng-template #title>微博列表</ng-template>
+				<ng-template #body>
+					<nz-list [nzDataSource]="listData" [nzItemLayout]="'horizontal'" [nzLoading]="loading">
+						<ng-template #item let-item>
+							<nz-list-item>
+								<nz-list-item-action><a (click)="editItem(item)">edit</a></nz-list-item-action>
+								<nz-list-item-action><a (click)="deleteItem(item)">more</a></nz-list-item-action>
+								<nz-list-item-meta
+										[nzTitle]="nzTitle"
+										nzAvatar="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
+										nzDescription="{{item.content}}">
+									<ng-template #nzTitle>
+										<a href="https://www.anline.cn">绿血贵族</a>
+									</ng-template>
+								</nz-list-item-meta>
+								<div></div>
+							</nz-list-item>
+						</ng-template>
+						<ng-template #loadMore>
+							<div *ngIf="showLoadMore" style="clear:both;text-align: center; margin-top: 12px; height: 32px; line-height: 32px;">
+								<button nz-button *ngIf="!loadingMore" (click)="handleLoadMore()">查看更多...</button>
+								<nz-spin *ngIf="loadingMore" [nzSpinning]="loadingMore"></nz-spin>
 							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 order-1 order-xl-2 m--align-right">
-						<a routerLink="publish" href="#" class="btn btn-accent m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
-									<span>
-										<i class="la la-send"></i>
-										<span>
-											发布
-										</span>
-									</span>
-						</a>
-						<div class="m-separator m-separator--dashed d-xl-none"></div>
-					</div>
-				</div>
-			</div>
-			<!--end: Search Form -->  		<!--begin: Datatable -->
-			<table class="m-datatable" id="html_table" width="100%">
-				<thead>
-				<tr>
-					<th title="Field #1">
-						微博ID
-					</th>
-					<th title="Field #2">
-						用户ID
-					</th>
-					<th title="Field #3">
-						内容
-					</th>
-					<th title="Field #4">
-						地址
-					</th>
-					<th title="Field #5">
-						更新时间
-					</th>
-					<th title="Field #6">
-						操作
-					</th>
+						</ng-template>
+					</nz-list>
+				</ng-template>
+			</nz-card>
+			<!--列表展示区结束-->
 
-				</tr>
-				</thead>
-				<tbody>
-					<tr *ngFor="let data of listData">
-						<td>
-							{{data.id}}
-						</td>
-						<td>
-							{{data.uid}}
-						</td>
-						<td>
-							{{data.content}}
-						</td>
-						<td>
-							{{data.address}}
-						</td>
-						<td>
-							{{data.update_time|date:"y年M月d日 H时m分"}}
-						</td>
-						<td>
-							<span style="overflow: visible; width: 110px;">
-								<span>
-									<span (click)="test()" class="item_more m-portlet__nav-link btn m-btn m-btn--hover-accent m-btn--icon m-btn--icon-only m-btn--pill" title="详情">
-										<i class="la la-ellipsis-h"></i>
-									</span>
-									<span (click)="editItem(data)" class="m-portlet__nav-link btn m-btn m-btn--hover-accent m-btn--icon m-btn--icon-only m-btn--pill" title="编辑">
-										<i class="la la-edit"></i>
-									</span>
-									<span (click)="deleteItem(data)" class="m-portlet__nav-link btn m-btn m-btn--hover-danger m-btn--icon m-btn--icon-only m-btn--pill" title="删除">
-										<i class="la la-trash"></i>
-									</span>
-								</span>
-							</span>
-						</td>
-
-					</tr>
-				</tbody>
-			</table>
 			<!--end: Datatable -->
 		</div>
 	</div>
